--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.40",
     "mongoose": "^6.3.1",
     "mongoose-timezone": "^1.3.0"
